# ImageTextEraser

./: README.md  app.spec  pyproject.toml
imagetexteraser/: MTCNN.py  app.py  backend_registry.py  backends.py  domain.py  guitest.py  image_processing.py  model_factories.py  modification.py  simple_script.py  test_face_recognition.py  utils.py
imagetexteraser/frontend/: browser.py
tests/: test_imagetexteraser.py
